closing August 2021